--- a/pom.xml
+++ b/pom.xml
@@ -210,6 +210,13 @@
             <version>2.3</version>
         </dependency>
 
+        <!-- ========================== Command line processing ========================== -->
+        <dependency>
+            <groupId>com.beust</groupId>
+            <artifactId>jcommander</artifactId>
+            <version>1.26</version>
+        </dependency>
+
         <!-- ========================== Test ========================== -->
         <dependency>
             <groupId>junit</groupId>
